# playground

./: .gitignore  DESIGN.md  HOW_IT_WORKS.md  pyproject.toml
data/: aapl_daily.csv  amzn_daily.csv  generate_sample_data.py  msft_daily.csv  synth_daily.csv
demos/: demo_buy_and_hold.py  demo_moving_average_crossover.py  demo_multi_ticker.py  demo_pnl_report.py
paper_trading/: __init__.py  broker.py  data.py  engine.py  instruments.py  matching.py  orders.py  position.py  strategy.py
tests/: test_broker.py  test_engine.py  test_matching.py  test_orders.py  test_position_pnl.py
